--- a/wp-content/themes/atu/assets/raw-assets/_less/main.less
+++ b/wp-content/themes/atu/assets/raw-assets/_less/main.less
@@ -14,6 +14,7 @@
 @secondary_color   : #5dd2c9;
 @secondary_color-d : #39c8be;
 @highlight         : #ffc0d9;
+@fade              : #f1f1f1;
 
 // Core variables and mixins
 // =======================================================================
@@ -47,6 +48,7 @@
 @import "theme/misc.less";
 @import "theme/icon.less";
 @import "theme/gallery.less";
+@import "theme/grid.less";
 @import "theme/navbar.less";
 @import "theme/navtab.less";
 @import "theme/member.less";
