--- a/wp-content/themes/atu/assets/raw-assets/_less/theme/icon.less
+++ b/wp-content/themes/atu/assets/raw-assets/_less/theme/icon.less
@@ -5,3 +5,22 @@
 .icon-r{
 	margin-left: 15px;
 }
+
+.icon-l-sm{
+	margin-right: 8px;
+}
+
+.icon-r-sm{
+	margin-left: 8px;
+}
+
+.icon-tel{
+	display: block;
+	margin: auto;
+	width: 32px;
+	height: 34px;
+	border: 2px solid rgba(255,255,255,.3);
+	background: url("@{image-url}/icon-tel.png") center no-repeat;
+	padding: 30px;
+	.border-radius(50%);
+}
