--- a/wp-content/themes/atu/assets/raw-assets/_less/theme/js-form.less
+++ b/wp-content/themes/atu/assets/raw-assets/_less/theme/js-form.less
@@ -22,13 +22,14 @@
     transition:all 0.25s ease;
     -webkit-backface-visibility: hidden;
     pointer-events: none;
-    font-size:16px;
+    font-size:14px;
+    font-weight: normal;
     
   }
 
 
   label.active {
-    transform: translateY(35px);
+    transform: translateY(-18px);
     left: 0px;
     font-size:13px;
     padding: 4px 8px;
@@ -56,13 +57,12 @@
   }
 
   textarea {
-    border:2px solid @base_border_color;
     resize: vertical;
   }
 
   .field-wrap {
     position:relative;
-    margin-bottom:20px;
+    margin-top:20px;
   }
 
   .top-row {
