--- a/wp-content/themes/atu/assets/raw-assets/_less/theme/well.less
+++ b/wp-content/themes/atu/assets/raw-assets/_less/theme/well.less
@@ -26,3 +26,26 @@
 		width: 100%;
 	}
 }
+.well-widget{
+	.well-header{
+		margin-bottom: 15px;
+		font-weight: bold;
+	}
+
+	padding: 10px;
+	background: rgba(255,255,255,.95);
+}
+.well-block{
+	border: 1px solid @base_border_color;
+	padding-bottom: 30px;
+	border-bottom: 3px solid @base_color;
+	.border-radius(5px);
+
+	.well-header{
+		background-color: @fade;
+		font-size: 18px;
+		.typo-lora;
+		font-weight: bold;
+		padding: 15px 10px; 	
+	}
+}
