--- a/wp-content/themes/atu/assets/raw-assets/_less/theme/apps.less
+++ b/wp-content/themes/atu/assets/raw-assets/_less/theme/apps.less
@@ -33,6 +33,9 @@
 	.border-radius(5px);
 	overflow: hidden;
 }
+.l-sidebar{
+	margin-top: 70px;
+}
 .l-footer{
 	background: url("@{image-url}/patternbg.jpg") top repeat;
 }
