What weve done page

--- a/wp-content/themes/atu/assets/raw-assets/_less/main.less
+++ b/wp-content/themes/atu/assets/raw-assets/_less/main.less
@@ -45,6 +45,7 @@
 @import "theme/flexslider.less";
 @import "theme/login.less";
 @import "theme/post.less";
+@import "theme/grid.less";
 @import "theme/misc.less";
 @import "theme/icon.less";
 @import "theme/gallery.less";
