--- a/wp-content/themes/atu/assets/raw-assets/_less/theme/gallery.less
+++ b/wp-content/themes/atu/assets/raw-assets/_less/theme/gallery.less
@@ -30,7 +30,7 @@
 	padding: 0 1em 1.875em;
 }
 
-.grid {
+.grid-gallery .grid {
 	margin: 0 auto;
 
 	img{
@@ -38,7 +38,7 @@
 	}
 }
 
-.grid li {
+.grid-gallery .grid li {
 	position: relative;
 	width: 25%;
 	float: left;
@@ -62,17 +62,17 @@
 	}
 }
 
-.grid img {
+.grid-gallery .grid img {
 	padding: 15px;
 	-webkit-transition: opacity 0.2s;
 	transition: opacity 0.2s;
 }
 
-.grid li:hover img {
+.grid-gallery .grid li:hover img {
 	opacity: 0.7;
 }
 
-.grid figcaption {
+.grid-gallery .grid figcaption {
 	background: #e4e4e4;
 	padding: 25px;
 }
