Continue working on atu plugin

--- a/wp-content/plugins/atu/assets/css/atu-admin-settings.css
+++ b/wp-content/plugins/atu/assets/css/atu-admin-settings.css
@@ -1,6 +1,10 @@
+.hidden {
+    display:none;
+}
+
 span.reg-code {
     background-color: #DDD;
     padding: 5px 10px;
-    display: inline-block;
     font-weight: bold;
 }
+
