css and inner pages update

--- a/wp-content/themes/atu/assets/raw-assets/_less/theme/grid.less
+++ b/wp-content/themes/atu/assets/raw-assets/_less/theme/grid.less
@@ -17,9 +17,9 @@
 .grid-isotope{
 
 	.grid-item{
-		width: 32%;
+		width: 31.5%;
 		float: left;
-		margin: 5px;
+		margin: .5%;
 		background-color: #fff;
 		border: 1px solid @base_border_color;
 	}
@@ -29,6 +29,10 @@
 	}
 	.grid-img{
 		position: relative;
+
+		img{
+			width: 100%;
+		}
 	}
 	.grid-title{
 		display: block;
