--- a/wp-content/themes/atu/assets/raw-assets/_less/theme/media-queries.less
+++ b/wp-content/themes/atu/assets/raw-assets/_less/theme/media-queries.less
@@ -118,6 +118,12 @@
 	.section-l4{
 		padding: 60px 0;
 	}
+	.grid-isotope{
+
+		.grid-item{
+			width: 49%;
+		}
+	}
 }
 
 @media (max-width: 670px){
@@ -182,6 +188,12 @@
 }
 
 @media (max-width: 580px){
+	.grid-isotope{
+
+		.grid-item{
+			width: 100%;
+		}
+	}
 	.btn{
 		display: block;
 		width: 100%;
@@ -191,6 +203,7 @@
 }
 
 @media (max-width: 400px){
+	
 	.slide-title{
 		font-size: 16px!important;
 	}
