--- a/wp-content/themes/atu/assets/raw-assets/_less/theme/post.less
+++ b/wp-content/themes/atu/assets/raw-assets/_less/theme/post.less
@@ -86,4 +86,23 @@
 		}
 	}
 }
+.post-meta{
+	display: block;
+	.meta{
+		display: inline-block;
+		color: #afafaf;
+	}
+}
+.post-blog{
 
+	.post-item{
+		padding-bottom: 20px;		
+		& ~ .post-item{
+			padding-top: 20px;
+			border-top: 1px solid @base_border_color;
+		}
+		.post-content{
+			
+		}
+	}
+}
