Minor updates and updated SQL

--- a/wp-content/themes/atu/assets/raw-assets/_less/theme/apps.less
+++ b/wp-content/themes/atu/assets/raw-assets/_less/theme/apps.less
@@ -5,9 +5,8 @@
 }
 .l-content-bg{
 	position: relative;
-	background: url("@{image-url}/banner.jpg") no-repeat;
-	background-attachment: fixed;
-	background-size: cover;
+	background-attachment: fixed!important;
+	background-size: cover!important;
 
 	.container{
 		padding-bottom: 60px;
