--- a/wp-content/themes/atu/assets/raw-assets/_less/theme/banner.less
+++ b/wp-content/themes/atu/assets/raw-assets/_less/theme/banner.less
@@ -13,6 +13,10 @@
 		border: 2px solid rgba(255,255,255,.8);
 		border-radius: 5px;
 	    padding: 20px 20px 0;
+
+	    .t-title{
+			color: #000;
+	    }
 	}
 	.banner-intro{
 		margin: auto;
