--- a/wp-content/themes/atu/assets/raw-assets/_less/theme/section.less
+++ b/wp-content/themes/atu/assets/raw-assets/_less/theme/section.less
@@ -32,10 +32,9 @@
 }
 .section-banner{
 	position: relative;
-	background: url("@{image-url}/banner.jpg") no-repeat;
-	background-attachment: fixed;
+	background-attachment: fixed!important;
 	min-height: 400px;
-	background-size: cover;
+	background-size: cover!important;
 
 	.scroll-down{
 		.animation(scroll  1s infinite linear);
