--- a/wp-content/themes/atu/assets/raw-assets/_less/theme/media-queries.less
+++ b/wp-content/themes/atu/assets/raw-assets/_less/theme/media-queries.less
@@ -195,6 +195,13 @@
 }
 
 @media (max-width: 580px){
+	.atu-error{
+		li{
+			float: none;
+			width: 100%;
+
+		}
+	}
 	.grid-isotope{
 
 		.grid-item{
