--- a/wp-content/themes/atu/assets/raw-assets/_less/theme/misc.less
+++ b/wp-content/themes/atu/assets/raw-assets/_less/theme/misc.less
@@ -50,3 +50,22 @@
 		background-color: rgba(255,115,178,.5);
 	}
 }
+
+.atu-error{
+	.clearfix;
+	margin-bottom: 30px;
+	display: block;
+	li{
+		width: 50%;
+		float: left;
+		color: @base_color-l;
+	}
+}
+
+.marquee{
+	padding: 0 10px;
+	overflow: hidden;
+	a{
+		white-space: nowrap;
+	}
+}
