--- a/wp-content/themes/atu/assets/raw-assets/_less/theme/js-form.less
+++ b/wp-content/themes/atu/assets/raw-assets/_less/theme/js-form.less
@@ -12,6 +12,7 @@
   margin-bottom: -3px;
   background-color: #fff;
   position: relative;
+  z-index: 1;
 }
 .field-wrap{
   label {
@@ -24,6 +25,7 @@
     pointer-events: none;
     font-size:14px;
     font-weight: normal;
+    z-index: 1;
     
   }
 
@@ -55,7 +57,10 @@
   		border-color:@base_color;
     }
   }
-
+  .wpcf7-form-control-wrap, .form-control-wrap{
+    position: relative;
+    z-index: 0;
+  }
   textarea {
     resize: vertical;
   }
