--- a/wp-content/themes/atu/assets/raw-assets/_less/theme/post.less
+++ b/wp-content/themes/atu/assets/raw-assets/_less/theme/post.less
@@ -80,7 +80,12 @@
 		}
 	}	
 	.post-name{
+		font-size: 16px;
 		color: @base_font_color;
+		
+		a{
+			padding: 0 10px;
+		}
 
 		&:active, &:hover, &:focus{
 			color: @base_color;
