--- a/wp-content/themes/atu/assets/raw-assets/_less/theme/section.less
+++ b/wp-content/themes/atu/assets/raw-assets/_less/theme/section.less
@@ -97,7 +97,11 @@
 		.typo-lora;
 		font-weight: bold;
 		font-size: 25px;
-		margin-bottom: 15px;
+		margin-bottom: 5px;
+	}
+	.contact-company{
+		margin-bottom: 10px;
+		color: #BDBDBD;
 	}
 	.contact-content{
 		margin-bottom: 15px;
