--- a/wp-content/themes/atu/assets/raw-assets/_less/theme/layout.less
+++ b/wp-content/themes/atu/assets/raw-assets/_less/theme/layout.less
@@ -3,3 +3,11 @@
 	margin: 0px auto;
 	overflow: hidden;
 }
+.row-sm{
+	margin: 0 -10px;
+
+	div[class^="col-"] { 
+		padding-right: 5px;
+		padding-left: 5px;
+	}
+}
