--- a/wp-content/themes/atu/assets/raw-assets/_less/theme/base.less
+++ b/wp-content/themes/atu/assets/raw-assets/_less/theme/base.less
@@ -6,6 +6,7 @@ html{
 img{
 	max-width: 100%;
   display: block;
+  height: auto!important;
 }
 
 
@@ -69,3 +70,7 @@ table {
   border-spacing: 0;
 }
 /*end of reset*/
+
+@-ms-viewport{
+  width: device-width;
+}
