--- a/wp-content/themes/atu/assets/raw-assets/_less/theme/flexslider.less
+++ b/wp-content/themes/atu/assets/raw-assets/_less/theme/flexslider.less
@@ -118,9 +118,10 @@
 
     img{
 
-      width: 100%;
-      display: block;
-      height: auto!important;
+        width: auto;
+        display: block;
+        height: auto!important;
+        margin: auto auto;
 
     }
 
