--- a/wp-content/themes/atu/assets/raw-assets/_less/theme/media-queries.less
+++ b/wp-content/themes/atu/assets/raw-assets/_less/theme/media-queries.less
@@ -97,7 +97,7 @@
 			border-top: 1px solid @base_border_color;
 			border-bottom: 1px solid @base_border_color;
 		}
-		.label,a{
+		.label,a,span{
 			text-align: center!important;
 		}
 	}
