--- a/wp-content/themes/atu/assets/raw-assets/_less/theme/navbar.less
+++ b/wp-content/themes/atu/assets/raw-assets/_less/theme/navbar.less
@@ -13,11 +13,11 @@
 	.borderbox;
 	height: auto;
 	background-color: #fff;
-	padding: 15px 15px 35px 15px;
+	padding: 15px;
 	.transition(linear .2s all);
 
 	&:hover, &:focus{
-		padding: 30px 15px 35px 15px;
+		padding: 20px 15px 15px 15px;
 		background-color: #fff!important;
 	}
 }
