--- a/wp-content/themes/atu/assets/raw-assets/_less/theme/media-queries.less
+++ b/wp-content/themes/atu/assets/raw-assets/_less/theme/media-queries.less
@@ -9,15 +9,15 @@
 		}
 	}
 
-	.t-huge{
+	.t-huge, .t-huge p{
 		font-size: 40px;
 		line-height: 55px;
 	}
-	.t-lg{
+	.t-lg, .t-lg p{
 		font-size: 30px;
 		line-height: 45px;
 	}
-	.t-md{
+	.t-md, .t-md p{
 		font-size: 25px;
 		line-height: 30px;
 	}
@@ -41,10 +41,6 @@
 			margin-bottom: 15px;
 		}
 	}
-	
-}
-
-@media (max-width: 820px){
 	.toggle-menuwrapper{
 		display: block!important;
 		opacity: 1!important;
@@ -63,6 +59,11 @@
 		    }
 		}
 	}
+	
+}
+
+@media (max-width: 820px){
+	
 	.t-reset{
 		text-align: inherit!important;
 	}
@@ -101,15 +102,15 @@
 			text-align: center!important;
 		}
 	}
-	.t-huge{
+	.t-huge, .t-huge p{
 		font-size: 30px;
 		line-height: 45px;
 	}
-	.t-lg{
+	.t-lg, .t-lg p{
 		font-size: 25px;
 		line-height: 40px;
 	}
-	.t-md{
+	.t-md, .t-md p{
 		font-size: 20px;
 		line-height: 35px;
 	}
@@ -147,7 +148,7 @@
 		font-size: 20px;
 		line-height: 30px;
 	}
-	.t-lg,.t-md,.t-sm{
+	.t-lg,.t-md,.t-sm, .t-lg p, .t-md p, .t-sm p{
 		font-size: 15px;
 		line-height: 25px;
 	}
