--- a/wp-content/themes/atu/assets/raw-assets/_less/theme/js-menu.less
+++ b/wp-content/themes/atu/assets/raw-assets/_less/theme/js-menu.less
@@ -301,7 +301,7 @@ the right position for the arrow
 	text-decoration: none;
 }
 
-.no-touch .toggle-menuwrapper li a:hover {
+.no-touch .toggle-menuwrapper li a:hover,.no-touch .toggle-menuwrapper li a:focus {
 	background: rgba(255,248,213,0.1);
 }
 
