--- a/wp-content/themes/wepn/assets/raw-assets/_less/theme/misc.less
+++ b/wp-content/themes/wepn/assets/raw-assets/_less/theme/misc.less
@@ -71,3 +71,33 @@
 		white-space: nowrap;
 	}
 }
+
+#loader-overlay{
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: block;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,.2);
+	z-index: 100;
+
+	.loading {
+	  display: block;
+	  font-size: 65px;
+	  text-indent: -9999em;
+	  overflow: hidden;
+	  width: 1em;
+	  height: 1em;
+	  border-radius: 50%;
+	  -webkit-transform: translateZ(0);
+	  -ms-transform: translateZ(0);
+	  transform: translateZ(0);
+	  -webkit-animation: load6 1.7s infinite ease;
+	  animation: load6 1.7s infinite ease;
+	  .is-transform;
+	  top: 30%;
+	}
+
+}
+
