--- a/wp-content/themes/wepn/assets/raw-assets/_less/theme/banner.less
+++ b/wp-content/themes/wepn/assets/raw-assets/_less/theme/banner.less
@@ -17,6 +17,13 @@
 	    .t-title{
 			color: #000;
 	    }
+	    .form-control{
+			max-width: 555px;
+			font-size: 20px;
+			height: 53px;
+			color: #4D3A29;
+			margin: 10px auto 0;
+		}
 	}
 	.banner-intro{
 		margin: auto;
@@ -45,7 +52,9 @@
 	        left: 0;
 		}
 	}
+
 	.actions{
+
 		.btn{
 			margin: 15px 0 20px;
 
