--- a/wp-content/themes/wepn/assets/raw-assets/_less/theme/post.less
+++ b/wp-content/themes/wepn/assets/raw-assets/_less/theme/post.less
@@ -116,6 +116,19 @@
 		}
 	}
 }
+.post-blog-md{
+	.post-item{
+		& ~ .post-item{
+			border-top: 1px solid rgba(255,255,255,.3);
+		}
+	}
+	
+	.post-meta{
+		.meta{
+			color: #fff;
+		}
+	}
+}
 .post-content{
 	h1,h2,h3,h4,h5{
 		margin-bottom: 10px;
