--- a/wp-content/themes/wepn/assets/raw-assets/_less/theme/well.less
+++ b/wp-content/themes/wepn/assets/raw-assets/_less/theme/well.less
@@ -49,3 +49,10 @@
 		padding: 15px 10px; 	
 	}
 }
+.well-transparent{
+	background-color: rgba(255,255,255,.1);
+	padding: 20px;
+	display: block;
+	.border-radius(5px);
+	border: 1px solid @base_color-d;
+}
