--- a/wp-content/themes/wepn/assets/raw-assets/_less/theme/media-queries.less
+++ b/wp-content/themes/wepn/assets/raw-assets/_less/theme/media-queries.less
@@ -225,6 +225,12 @@
 			}
 		}
 	}
+	.grid-isotope{
+
+		.grid-item{
+			width: 100%!important;
+		}
+	}
 }
 
 @media (max-width: 580px){
@@ -235,12 +241,7 @@
 
 		}
 	}
-	.grid-isotope{
-
-		.grid-item{
-			width: 100%;
-		}
-	}
+	
 	.btn{
 		display: block;
 		width: 100%;
