--- a/wp-content/themes/wepn/assets/raw-assets/_less/theme/grid.less
+++ b/wp-content/themes/wepn/assets/raw-assets/_less/theme/grid.less
@@ -46,6 +46,21 @@
 		font-size: 16px;
 	}
 
+	.grid-date{
+		position: absolute;
+		background-color: fade(@secondary_color,60%);
+		padding: 3px 10px;
+		top: -20px;
+		width: 100%;
+		font-size: 14px;
+		text-transform: uppercase;
+		left: 0;
+
+		&.done{
+			background-color: fade(@base_color,60%);
+		}
+	} 
+
 	&.grid-isotope-md{
 		.grid-item{
 			width: 49%;
