--- a/wp-content/themes/wepn/assets/raw-assets/_less/bootstrap/panels.less
+++ b/wp-content/themes/wepn/assets/raw-assets/_less/bootstrap/panels.less
@@ -1,5 +1,5 @@
 //
-// Panels
+// panels
 // --------------------------------------------------
 
 
@@ -12,7 +12,7 @@
   .box-shadow(0 1px 1px rgba(0,0,0,.05));
 }
 
-// Panel contents
+// panel contents
 .panel-body {
   padding: @panel-body-padding;
   &:extend(.clearfix all);
@@ -187,9 +187,9 @@
 }
 
 
-// Collapsable panels (aka, accordion)
+// Collapsable panels (aka, panel)
 //
-// Wrap a series of panels in `.panel-group` to turn them into an accordion with
+// Wrap a series of panels in `.panel-group` to turn them into an panel with
 // the help of our collapse JavaScript plugin.
 
 .panel-group {
