--- a/wp-content/themes/wepn/assets/raw-assets/_less/main.less
+++ b/wp-content/themes/wepn/assets/raw-assets/_less/main.less
@@ -22,6 +22,7 @@
 @import "bootstrap/variables.less";
 @import "bootstrap/mixins.less";
 @import "bootstrap/modals.less";
+@import "bootstrap/panels.less";
 
 // Core CSS
 @import "bootstrap/scaffolding.less";
@@ -65,6 +66,7 @@
 @import "theme/pricing.less";
 @import "theme/pagination.less";
 @import "theme/page.less";
+@import "theme/panel.less";
 @import "theme/well.less";
 @import "theme/list.less";
 @import "theme/js-range.less";
