--- a/wp-content/themes/wepn/assets/raw-assets/_less/bootstrap/mixins.less
+++ b/wp-content/themes/wepn/assets/raw-assets/_less/bootstrap/mixins.less
@@ -424,7 +424,7 @@
   background-color: @color;
 }
 
-// Panels
+// panels
 // -------------------------
 .panel-variant(@border; @heading-text-color; @heading-bg-color; @heading-border) {
   border-color: @border;
