--- a/wp-content/themes/wepn/assets/raw-assets/_less/theme/panel.less
+++ b/wp-content/themes/wepn/assets/raw-assets/_less/theme/panel.less
@@ -11,6 +11,12 @@
 	.panel-heading{
 		font-size: 18px;
 		.t-title;
+		padding: 0 0;
+
+		a{
+			padding: 10px 15px;
+			display: block;
+		}
 	}
 	.panel-body{
 		border-top: 1px solid @base_border_color;
