--- a/wp-content/themes/wepn/assets/raw-assets/_less/theme/misc.less
+++ b/wp-content/themes/wepn/assets/raw-assets/_less/theme/misc.less
@@ -111,3 +111,16 @@ iframe{
 	max-width: 100%;
 	width: 100%!important;
 }
+
+.modal{
+
+	&.modal-md{
+		.modal-content{
+			.border-radius(0 0);
+
+		}
+		.modal-body{
+			padding: 5px;
+		}
+	}
+}
