--- a/wp-content/themes/wepn/assets/raw-assets/_less/main.less
+++ b/wp-content/themes/wepn/assets/raw-assets/_less/main.less
@@ -67,6 +67,7 @@
 @import "theme/pagination.less";
 @import "theme/page.less";
 @import "theme/panel.less";
+@import "theme/parallax.less";
 @import "theme/well.less";
 @import "theme/list.less";
 @import "theme/js-range.less";
