--- a/wp-content/themes/wepn/assets/raw-assets/_less/theme/js-menu.less
+++ b/wp-content/themes/wepn/assets/raw-assets/_less/theme/js-menu.less
@@ -348,6 +348,7 @@ the right position for the arrow
 	transform: translateY(10px);
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
+	overflow-y: scroll;
 }
 
 .toggle-menuwrapper .toggle-menu.toggle-menu-toggle {
