--- a/wp-content/themes/wepn/assets/raw-assets/_less/theme/media-queries.less
+++ b/wp-content/themes/wepn/assets/raw-assets/_less/theme/media-queries.less
@@ -1,3 +1,16 @@
+@media (max-width: 1200px){
+	.section-banner{
+		min-height: 400px;
+	}
+	.banner{
+		.banner-content{
+			width: 90%;
+		}
+		.banner-intro{
+			margin-top: 30px;
+		}
+	}
+}
 @media (max-width: 1190px){
 
 	.banner{
@@ -49,6 +62,9 @@
 		display: none;
 	}
 	.l-header{
+		.navbar-default{
+			margin-bottom: 0px;
+		}
 		.navbar-brand{
 		    width: 100%;
 		    position: relative;
@@ -56,16 +72,9 @@
 
 		    img{
     			margin: 0 auto;
+    			width: 65px;
 		    }
 		}
-	}
-	
-}
-
-@media (max-width: 820px){
-	
-	.t-reset{
-		text-align: inherit!important;
 	}
 	.banner{
 		.banner-actions{
@@ -83,6 +92,15 @@
 	    	}
 		}
 	}
+	
+}
+
+@media (max-width: 820px){
+	
+	.t-reset{
+		text-align: inherit!important;
+	}
+	
 	.footer-logo{
 		display: none;
 	}
