--- a/wp-content/themes/wepn/assets/raw-assets/_less/theme/button.less
+++ b/wp-content/themes/wepn/assets/raw-assets/_less/theme/button.less
@@ -13,20 +13,20 @@
 .btn-primary {
 	background: @base_color;
 	border: 1px solid @base_color-d;
-	color: #fff;
+	color: #fff!important;
 	.text-shadow-sm;
 	&:active, &:hover, &:focus{
-		color: #fff;
+		color: #fff!important;
 		background: @base_color-l;
 	}
 }
 .btn-secondary {
 	background: @secondary_color;
 	border: 1px solid @secondary_color-d;
-	color: #fff;
+	color: #fff!important;
 	.text-shadow-sm;
 	&:active, &:hover, &:focus{
-		color: #fff;
+		color: #fff!important;
 		background: @secondary_color-d;
 		border: 1px solid @secondary_color;
 	}
