--- a/wp-content/themes/wepn/assets/raw-assets/_less/theme/form.less
+++ b/wp-content/themes/wepn/assets/raw-assets/_less/theme/form.less
@@ -12,6 +12,11 @@
 		.box-shadow(none);
 	}
 }
+.form-multiple{
+	.form-control{
+		min-height: 70px;
+	}
+}
 .input-group-addon{
 	background-color: #fff;
 	text-transform: uppercase;
