--- a/wp-content/themes/wepn/assets/raw-assets/_less/theme/media-queries.less
+++ b/wp-content/themes/wepn/assets/raw-assets/_less/theme/media-queries.less
@@ -156,6 +156,11 @@
 }
 
 @media (max-width: 670px){
+	.form-multiple{
+		.form-control{
+			min-height: 41px;
+		}
+	}
 	.btn-lg{
 		font-size: 15px;
 	}
