--- a/wp-content/themes/wepn/assets/raw-assets/_less/theme/mixin.less
+++ b/wp-content/themes/wepn/assets/raw-assets/_less/theme/mixin.less
@@ -23,6 +23,11 @@
   position: absolute;
   top: 0; left: 0; bottom: 0; right: 0;
 }
+.absolute-center-bot{
+  .absolute-center;
+  top: auto;
+  bottom: 10%;
+}
 
 .is-transform { 
   margin: auto;
