--- a/wp-content/themes/wepn/assets/raw-assets/_less/theme/js-form.less
+++ b/wp-content/themes/wepn/assets/raw-assets/_less/theme/js-form.less
@@ -3,6 +3,12 @@
   margin:2px;
   color:@base_color;
 }
+.def {
+  margin:2px;
+  color: #B9B9B9;
+  font-size: 13px;
+  text-transform: uppercase;
+}
 .label-drop{
   border: 1px solid @base_border_color;
   padding: 5px 10px;
