--- a/wp-content/themes/wepn/assets/raw-assets/_less/theme/section.less
+++ b/wp-content/themes/wepn/assets/raw-assets/_less/theme/section.less
@@ -73,9 +73,13 @@
 .section-tabbed{
 	border: 1px solid @base_border_color;
 	.tab-content{
+		.clearfix;
 		padding: 20px 15px;
 		background-color: #fff;
 		.transition(linear 1s all);
+	}
+	.tab-pane{
+		.clearfix;
 	}
 	
 }
