--- a/wp-content/themes/wepn/assets/raw-assets/_less/theme/misc.less
+++ b/wp-content/themes/wepn/assets/raw-assets/_less/theme/misc.less
@@ -148,6 +148,7 @@ iframe{
 	.modal-header{
 		background-color: #39273e;
 		color: #fff!important;
+		border-bottom: 1px solid #241727;
 	} 
 	.modal-body{
 		background: url("@{image-url}/patternbg.jpg") top repeat;
