--- a/wp-content/themes/wepn/assets/raw-assets/_less/theme/checkbox.less
+++ b/wp-content/themes/wepn/assets/raw-assets/_less/theme/checkbox.less
@@ -32,7 +32,7 @@ input[type="checkbox"] + span:after{
     position: absolute;
     top: 3px;
     left: 5px;
-	font-family: 'icomoon';
+	.fa;
 	speak: none;
     font-size: 13px;
     font-style: normal;
@@ -43,7 +43,7 @@ input[type="checkbox"] + span:after{
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	color: #752e5d;
-	content: "\ea10";
+	content: "\f00c";
 	display: none;
  }
 
@@ -76,7 +76,7 @@ input[type="checkbox"]:checked + span:after{
  }
 
 input[type="checkbox"]{
-     display: none;
+     display: none!important;
  }
 
 .checkbox{
