--- a/wp-content/themes/wepn/assets/raw-assets/_less/theme/commons.less
+++ b/wp-content/themes/wepn/assets/raw-assets/_less/theme/commons.less
@@ -9,10 +9,10 @@
 	
 }
 .mt-0{
-	margin-top: 0;
+	margin-top: 0!important;
 }
 .mt-10{
-	margin-top: 10px;
+	margin-top: 10px!important;
 }
 .mt-20{
 	margin-top: 20px;
