--- a/wp-content/themes/wepn/assets/raw-assets/_less/theme/media-queries.less
+++ b/wp-content/themes/wepn/assets/raw-assets/_less/theme/media-queries.less
@@ -299,6 +299,23 @@
 		margin-right: 0!important;
 		margin-left: 0!important;
 	}
+	.cbrating_user_name{
+		display: block;
+		width: 100%!important;
+		text-align: center;
+	}
+	.review_user_details .user_gravatar img{
+		display: block;
+		float: none!important;
+		margin:  20px auto 15px!important;
+	}
+	.review_wrapper .user_rate_time {
+	    position: absolute;
+	    top: -20px!important;
+	    right: 0px;
+	    left: 0;
+	    text-align: center;
+	}
 }
 
 @media (max-width: 400px){
