--- a/wp-content/themes/wepn/assets/raw-assets/_less/theme/misc.less
+++ b/wp-content/themes/wepn/assets/raw-assets/_less/theme/misc.less
@@ -157,3 +157,73 @@ iframe{
 		color: #fff!important;
 	}
 }
+
+.cbrp_front_content{
+	width: 100%!important;
+}
+.cbratingfrom_reviews_title{
+	margin: 15px 0px;
+	text-transform: uppercase;
+	font-size: 18px;
+}
+.user_rate_time{
+	top: 0px!important;
+}
+.cbratingload_more_button{
+	position: relative;
+	.btn-primary;
+	padding: 0 0!important;
+	a{
+		color: #fff;
+		text-decoration: none!important;
+		padding: 10px 18px;
+		display: block;
+	}
+}
+
+.review_rating .review_user_rating_comment{
+	font-size: 15px;
+}
+
+.cbrating_waiting_icon {
+    position: relative;
+    display: inline-block;
+    top: 3px;
+    left: 10px;
+}
+.review_user_details .user_gravatar{
+    font-size: 15px;
+    font-weight: bold;
+ }
+.review_user_details .user_gravatar img{
+	.border-radius(50%);
+}
+.review_user_details .user_gravatar span{
+	display: block;
+}
+
+.readonly_criteria_average_label_form_basic_theme{
+	.rating{
+		font-weight: bold;
+		color: @base_color;
+	}
+}
+.raty-cancel{
+	display: none!important;
+}
+.criteria-wrapper{
+	margin-top: 15px!important;
+}
+.cbrating_commentarea{
+	.form-control;
+	min-height: 250px;
+	min-width: 100%;
+	max-width: 100%;
+}
+.cbrp-button{
+	.btn;
+	.btn-block;
+	.btn-primary;
+	float: none!important;
+	clear: both;
+}
