--- a/wp-content/themes/wepn/assets/raw-assets/_less/theme/button.less
+++ b/wp-content/themes/wepn/assets/raw-assets/_less/theme/button.less
@@ -11,13 +11,13 @@
 }
 
 .btn-primary {
-	background: @base_color;
-	border: 1px solid @base_color-d;
+	background: @base_color!important;
+	border: 1px solid @base_color-d!important;
 	color: #fff!important;
 	.text-shadow-sm;
 	&:active, &:hover, &:focus{
 		color: #fff!important;
-		background: @base_color-l;
+		background: @base_color-l!important;
 	}
 }
 .btn-secondary {
@@ -62,7 +62,8 @@
 
 }
 .btn-block,.input-block{
-	display: block;
-	clear: both;
+	width: 100%;
+	display: block!important;
+	clear: both!important;
 }
 
